refactor: UserContext deleted get username method deleted FriendRequest service changed with getid not username PackageEntity author changed string to long dao -> domain for readability